# Modeling-and-Control-of-Concentric-Tube-Continuum-Robots

./: CMakeLists.txt  README.md
demo/: 001_model_computation.cpp  002_control_line.cpp  CMakeLists.txt
parameters/: parameters.csv
src/: CMakeLists.txt  ComputeIvpJacobianMatrices.cpp  ComputeIvpJacobianMatrices.h  CtrModel.cpp  CtrModel.h  bcError.cpp  bcError.h  ctrConstants.h  loadParameters.cpp  loadParameters.h  odeCtr.cpp  odeCtr.h  odeIntCtrRK4.cpp  odeIntCtrRK4.h  pinv.h  plotCtr.cpp  plotCtr.h  segmenting.cpp  segmenting.h  solveIVP.cpp  solveIVP.h
